Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.

VERSION 2.2-beta2
  CHANGES:
    * Grouping mode has been merged into the playlist layouts so each layout
      sets its own. The default grouping mode for layout files that do not 
      have this value explicitly set is "Album". Thanks to Tim Bocek 
      <tim.bocek@gmail.com> for this set of patches.

  BUGFIXES:
    * The playlist sorting scheme is restored on startup.
    * Fixed compilation of iPod collections without gdk-pixbuf.h. (BR 206347)
    * Audio CDs are ejected properly.
    * Media device eject/disconnect actions render properly when scrolling the 
      collection browser. (BR 204566)
    * Fixed wikipedia applet not working when using a custom skin. Thanks to Stefan 
      Majewsky for the suggestion. (BR 205901)
    * Fixed "Show in Service" action.
    * Fixed extra empty rows sometimes getting added to the playlist layout xml
      when using the playlist layout editor. (BR 205182)
    * Fixed typo in D-Bus manifest, that resulted in incorrect function
      invokation in IRKick. (BR 205729)
    * Correctly mark playing track as active in the playlist after removing it
      using the "clear playlist" button and later re-adding it.
    * Fixed crash when removing an "albumless" track, like a podcast from the 
      playlist with the random album playback mode enabled. (BR 201476)
    * Fixed track queuing when the playlist uses a random track progression.
      (BR 194328)
    * Fixed issue where files or folders with the same name but different case
      sensitivity were not scanned and/or retained. (BR 197384)

VERSION 2.2-beta1
  FEATURES:
    * Allow pasting an URL from clipboard to playlist with middle mouse click.
      Patch by Felix Geyer <debfx-kde@fobos.de>.
    * Support for copying aiff files to iPods. (BR 200820)
    * Add openDesktop.org support to the About dialog to make it easier
      to interact with the Amarok team.