@@ -235,17 +235,17 @@ ProgressWidget::engineTrackLengthChanged( long seconds )
 void
 ProgressWidget::redrawBookmarks()
 {
+    DEBUG_BLOCK
     m_slider->clearTriangles();
 
     if( The::engineController()->currentTrack() )
     {
-        debug() << "here 1";
         Meta::TrackPtr track = The::engineController()->currentTrack();
         if( track->hasCapabilityInterface( Meta::Capability::LoadTimecode ) )
         {
-            debug() << "here 2";
             Meta::TimecodeLoadCapability *tcl = track->create<Meta::TimecodeLoadCapability>();
             BookmarkList list = tcl->loadTimecodes();
+            debug() << "found " << list.count() << " timecodes on this track";
             foreach( AmarokUrlPtr url, list )
             {
                 if( url->command() == "play"  ) {
